<resources>
    <string name="app_name">Teams</string>
    <string name="title_activity_invite_members">Invite Members</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="invite_permissions">Invite permissions</string>
    <string name="limit">Limit</string>
    <string name="current_members">Current Members</string>
    <string name="current_supporters">Current Supporters</string>
    <string name="what_are_permissions">What are Permissions?</string>
    <string name="invite_urls_are_valid_for_7_days_permissions_can_be_changed_from_the_member_management_view">Invite URLs are valid for 7 days. permissions can be changed from the member management view</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="copy_link">Copy Link</string>
</resources>